quick fix for spacing on the groups page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,3 +108,9 @@ background-color:white;
     color: #000;
     text-decoration: none;
 }
+
+.group-list-badge {
+    margin-top: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
